# knowledge-base-examples

./: .gitignore  README.md  search-large.py  search.py  test.py  全书翻译.yml  小客服.yml  小米智能跳绳.txt  法律领域 RAG 应用.md
argo/: README.md  configmap.yaml  dify-s3-sync-cron.yaml  dify-s3-sync-template.yaml  fetch_dify_docs.sh  process_files.sh  pvc.yaml
argo-workflows/basic/: README.md  dify-s3-sync-template.yaml  sync-s3-files.sh  update-dify-knowledge-base.sh
argo-workflows/bg-deploy/: README.md  bg-deploy-template.yaml  configmap.yaml  pvc.yaml  secret.yaml
argo-workflows/bg-deploy-criminal-cases/: Dockerfile  README.md  bg-deploy-template.yaml  configmap.yaml  db-insert.py  download.sh  pvc.yaml
argo-workflows/blue-green/: README.md  (+3 more)
argo-workflows/blue-green-deployment/: README.md  blue-green-deployment-template.yaml  configmap-workflow.yaml  configmap.yaml  maintain-releases.py  publish-release.py  pvc.yaml  sync-files.sh
argo-workflows/blue-green-deployment-criminal-cases/: README.md  blue-green-deployment-template.yaml  configmap.yaml  download-files.sh  pvc.yaml
dify-chatflows/: law-assistant-ekb.yml  law-assistant-mcp.yml  刑法助手.yml
dify-ekb-server/: README.md  k8s.yaml
law-qa/: README.md  review.md  technical-discussion.md
law-qa/agent/: .dockerignore  Dockerfile  README.md  agent.py  app.py  k8s.yaml  pyproject.toml  run_agent_server.sh  system-prompt.md  system-prompt.txt
law-qa/agent/core/: agent.py  bot.py  config.py  conversation.py  tokenizer.py
law-qa/agent/interfaces/: cli.py  openai_api.py  webui.py
n8n-workflows/: RAG.json  calendar.json
(+201 files in other folders)
